--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -102,6 +102,20 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/ForgotPassword"
+                app:layout_constraintVertical_bias="0.148" />
+            <TextView
+                android:id="@+id/ForgotPassword"
+                android:layout_width="176dp"
+                android:layout_height="41dp"
+                android:gravity="center"
+                android:text="Forgotten Password?"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/LogInBtn"
                 app:layout_constraintVertical_bias="0.148" />
         </androidx.constraintlayout.widget.ConstraintLayout>
